--- a/publcations.html
+++ b/publcations.html
@@ -493,11 +493,11 @@ View the web archive through the <a href="">Wayback Machine</a>.
 if (TransMenu.isSupported()) {
 var ms = new TransMenuSet(TransMenu.direction.down, 0,0, TransMenu.reference.bottomLeft);
 var menu162 = ms.addMenu(document.getElementById("menu162"));
- menu162.addItem("Partners", "/who-we-are/partners", "0");
+ menu162.addItem("Partners", "who-we-are/partners.html", "0");
 var menu164 = ms.addMenu(document.getElementById("menu164"));
  menu164.addItem("Context", "", "0");
 menu164.addItem("Expected Outcomes", "", "0");
-menu164.addItem("Strategy", "/our-activities/strategy", "0");
+menu164.addItem("Strategy", "", "0");
 menu164.addItem("Major Achievements to date", "", "0");
 function init16() {
 if (TransMenu.isSupported()) {
