--- a/copyright.html
+++ b/copyright.html
@@ -493,12 +493,12 @@ View the web archive through the <a href=""></a>.
 if (TransMenu.isSupported()) {
 var ms = new TransMenuSet(TransMenu.direction.down, 0,0, TransMenu.reference.bottomLeft);
 var menu162 = ms.addMenu(document.getElementById("menu162"));
- menu162.addItem("Partners", "/who-we-are/partners", "0");
+ menu162.addItem("Partners", "who-we-are/partners.html", "0");
 var menu164 = ms.addMenu(document.getElementById("menu164"));
- menu164.addItem("Context", "/our-activities/context", "0");
-menu164.addItem("Expected Outcomes", "/our-activities/expected-outcomes", "0");
-menu164.addItem("Strategy", "/our-activities/strategy", "0");
-menu164.addItem("Major Achievements to date", "/our-activities/major-achievements-to-date", "0");
+ menu164.addItem("Context", "", "0");
+menu164.addItem("Expected Outcomes", "", "0");
+menu164.addItem("Strategy", "", "0");
+menu164.addItem("Major Achievements to date", "", "0");
 function init16() {
 if (TransMenu.isSupported()) {
 TransMenu.initialize();
