--- a/copyright.html
+++ b/copyright.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="css/banner.css" />
 <link rel="stylesheet" type="text/css" href="css/iconochive.css" />
-<!-- End Wayback Rewrite JS Include -->
+<!-- End  Rewrite JS Include -->
 
   <base href="/copyright.html"/>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
@@ -325,7 +325,7 @@ background-color: #be0926 !important;
 
 </head>
 
-<body><!-- BEGIN WAYBACK TOOLBAR INSERT -->
+<body><!-- BEGIN  TOOLBAR INSERT -->
 <script>__wm.rw(0);</script>
 <div id="wm-ipp-base" lang="en" style="display:none;direction:ltr;">
 <div id="wm-ipp" style="position:fixed;left:0;top:0;right:0;">
@@ -452,7 +452,7 @@ View the web archive through the <a href=""></a>.
     </div>
   </div></div></div></div><div id="wm-ipp-print">The  - /copyright.html</div>
 
-<!-- END WAYBACK TOOLBAR INSERT -->
+<!-- END  TOOLBAR INSERT -->
  
 	<div id="bando">
 	</div>
