--- a/publcations.html
+++ b/publcations.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="css/banner-styles.css" />
 <link rel="stylesheet" type="text/css" href="css/iconochive.css" />
-<!-- End Wayback Rewrite JS Include -->
+<!-- End  Rewrite JS Include -->
 
   <base href="/publcations.html"/>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
@@ -325,7 +325,7 @@ background-color: #be0926 !important;
 
 </head>
 
-<body><!-- BEGIN WAYBACK TOOLBAR INSERT -->
+<body><!-- BEGIN TOOLBAR INSERT -->
 <script>__wm.rw(0);</script>
 <div id="wm-ipp-base" lang="en" style="display:none;direction:ltr;">
 <div id="wm-ipp" style="position:fixed;left:0;top:0;right:0;">
@@ -338,7 +338,7 @@ background-color: #be0926 !important;
 </div><div id="wm-ipp-inside">
   <div id="wm-toolbar" style="position:relative;display:flex;flex-flow:row nowrap;justify-content:space-between;">
     <div id="wm-logo" style="/*width:110px;*/padding-top:12px;">
-      <a href="" title="Wayback Machine home page"><img src="/images/wayback-toolbar-logo-200.png" srcset="" alt="Wayback Machine" style="width:100px" border="0" /></a>
+      <a href="" title=" home page"><img src="/images/wayback-toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
     </div>
     <div class="c" style="display:flex;flex-flow:column nowrap;justify-content:space-between;flex:1;">
       <form class="u" style="display:flex;flex-direction:row;flex-wrap:nowrap;" target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="/publications.html" onfocus="this.focus();this.select();" style="flex:1;"/><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20160131201204" /><input type="submit" value="Go" />
@@ -392,7 +392,7 @@ background-color: #be0926 !important;
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
         </span>
-                <a class="xxs" href="" title="Get some help using the Wayback Machine" style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
+                <a class="xxs" href="" title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
         <a id="wm-tb-close" href="#close" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
       </div>
       <div id="wm-share" class="xxs">
@@ -426,7 +426,7 @@ background-color: #be0926 !important;
 
 At any given time several distinct crawls are running, some for months, and some every day or longer.
 
-View the web archive through the <a href="">Wayback Machine</a>.
+View the web archive through the <a href=""></a>.
 	</div>
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
@@ -434,7 +434,7 @@ View the web archive through the <a href="">Wayback Machine</a>.
 		<div>Collection: <a style="color:#33f;" href="" target="_new"><span class="wm-title">Survey Crawl Number 4 - Started Jan 9th, 2016 - Ended Feb 25th, 2016</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  <p>The seed for this crawl was a list of every host in the Wayback Machine</p>
+	  <p>The seed for this crawl was a list of every host in the </p>
 
 <p>This crawl was run at a level 1 (URLs including their embeds, plus the URLs of all outbound links including their embeds)</p>
 
@@ -447,12 +447,12 @@ View the web archive through the <a href="">Wayback Machine</a>.
     <div style="background-color:#666;color:#fff;font-weight:bold;text-align:center" title="Timestamps for the elements of this page">TIMESTAMPS</div>
     <div>
       <div id="wm-capresources" style="margin:0 5px 5px 5px;max-height:250px;overflow-y:scroll !important"></div>
-      <div id="wm-capresources-loading" style="text-align:left;margin:0 20px 5px 5px;display:none"><img src="https://web-static.archive.org/_static/images/loading.gif" alt="loading" /></div>
+      <div id="wm-capresources-loading" style="text-align:left;margin:0 20px 5px 5px;display:none"><img src="/images/loading.gif" alt="loading" /></div>
     </div>
     </div>
-  </div></div></div></div><div id="wm-ipp-print">The Wayback Machine - /publcations.html</div>
+  </div></div></div></div><div id="wm-ipp-print">The  - /publcations.html</div>
 
-<!-- END WAYBACK TOOLBAR INSERT -->
+<!-- END TOOLBAR INSERT -->
  
 	<div id="bando">
 	</div>
@@ -606,7 +606,7 @@ window.onload = init16();
                 <div id="pied_news"></div>
                 </div>
                 <div style="padding-left: 50%; margin-left: -34px;">
-                								<a href="https://web.archive.org/web/20160131201204/http://cordis.europa.eu/result/report/rcn/54277_en.html" target="_blank"><div id="fp72"></div></a>
+                								<a href="" target="_blank"><div id="fp72"></div></a>
                 </div>
             </div>
                         <div id="contenu"> <div style="width:493px;">                       
@@ -843,7 +843,7 @@ window.onload = init46();
 <!--
      FILE ARCHIVED ON 20:12:04 Jan 31, 2016 AND RETRIEVED FROM THE
      INTERNET ARCHIVE ON 05:25:23 Feb 17, 2024.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
+     JAVASCRIPT APPENDED BY , COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
      SECTION 108(a)(3)).
