--- a/whoweare.html
+++ b/whoweare.html
@@ -336,7 +336,7 @@
   </head>
 
   <body>
-    <!-- BEGIN WAYBACK TOOLBAR INSERT -->
+    <!-- BEGIN  TOOLBAR INSERT -->
     <script>
       __wm.rw(0);
     </script>
@@ -365,11 +365,11 @@
             "
           >
             <div id="wm-logo" style="/*width:110px;*/ padding-top: 12px">
-              <a href="" title="Wayback Machine home page"
+              <a href="" title=" home page"
                 ><img
                   src="/images/wayback-toolbar-logo-200.png"
                   srcset=""
-                  alt="Wayback Machine"
+                  alt=""
                   style="width: 100px"
                   border="0"
               /></a>
@@ -534,7 +534,7 @@
                 <a
                   class="xxs"
                   href=""
-                  title="Get some help using the Wayback Machine"
+                  title="Get some help using the "
                   style="top: -6px"
                   ><span
                     class="iconochive-question"
@@ -664,7 +664,7 @@
                     through many different web crawls. At any given time several
                     distinct crawls are running, some for months, and some every
                     day or longer. View the web archive through the
-                    <a href="">Wayback Machine</a>.
+                    <a href=""></a>.
                   </div>
                 </div>
                 <div
@@ -707,7 +707,7 @@
                     ></div>
                     <p>
                       The seed for this crawl was a list of every host in the
-                      Wayback Machine
+                      
                     </p>
 
                     <p>
@@ -762,11 +762,11 @@
       </div>
     </div>
     <div id="wm-ipp-print">
-      The Wayback Machine -
+      The  -
       /whoweare.html
     </div>
 
-    <!-- END WAYBACK TOOLBAR INSERT -->
+    <!-- END TOOLBAR INSERT -->
 
     <div id="bando"></div>
     <div id="global">
