--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="css/banner-styles.css" />
 <link rel="stylesheet" type="text/css" href="css/iconochive.css" />
 
-<!-- End Wayback Rewrite JS Include -->
+<!-- End  Rewrite JS Include -->
 
   <base href="/links.html"/>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
@@ -324,7 +324,7 @@ background-color: #be0926 !important;
 
 </head>
 
-<body><!-- BEGIN WAYBACK TOOLBAR INSERT -->
+<body><!-- BEGIN  TOOLBAR INSERT -->
 <script>__wm.rw(0);</script>
 <div id="wm-ipp-base" lang="en" style="display:none;direction:ltr;">
 <div id="wm-ipp" style="position:fixed;left:0;top:0;right:0;">
@@ -337,7 +337,7 @@ background-color: #be0926 !important;
 </div><div id="wm-ipp-inside">
   <div id="wm-toolbar" style="position:relative;display:flex;flex-flow:row nowrap;justify-content:space-between;">
     <div id="wm-logo" style="/*width:110px;*/padding-top:12px;">
-      <a href="/web/" title="Wayback Machine home page"><img src="/images/wayback-toolbar-logo-200.png" srcset="" alt="Wayback Machine" style="width:100px" border="0" /></a>
+      <a href="/web/" title=" home page"><img src="/images/wayback-toolbar-logo-200.png" srcset="" alt="" style="width:100px" border="0" /></a>
     </div>
     <div class="c" style="display:flex;flex-flow:column nowrap;justify-content:space-between;flex:1;">
       <form class="u" style="display:flex;flex-direction:row;flex-wrap:nowrap;" target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="/links.html" onfocus="this.focus();this.select();" style="flex:1;"/><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20160201072251" /><input type="submit" value="Go" />
@@ -391,7 +391,7 @@ background-color: #be0926 !important;
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
         </span>
-                <a class="xxs" href="http://faq.web.archive.org/" title="Get some help using the Wayback Machine" style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
+                <a class="xxs" href="http://faq.web.archive.org/" title="Get some help using the " style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
         <a id="wm-tb-close" href="#close" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
       </div>
       <div id="wm-share" class="xxs">
@@ -425,7 +425,7 @@ background-color: #be0926 !important;
 
 At any given time several distinct crawls are running, some for months, and some every day or longer.
 
-View the web archive through the <a href="http://archive.org/web/web.php">Wayback Machine</a>.
+View the web archive through the <a href="http://archive.org/web/web.php"></a>.
 	</div>
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
@@ -433,7 +433,7 @@ View the web archive through the <a href="http://archive.org/web/web.php">Waybac
 		<div>Collection: <a style="color:#33f;" href="https://archive.org/details/survey_00004" target="_new"><span class="wm-title">Survey Crawl Number 4 - Started Jan 9th, 2016 - Ended Feb 25th, 2016</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  <p>The seed for this crawl was a list of every host in the Wayback Machine</p>
+	  <p>The seed for this crawl was a list of every host in the </p>
 
 <p>This crawl was run at a level 1 (URLs including their embeds, plus the URLs of all outbound links including their embeds)</p>
 
@@ -449,9 +449,9 @@ View the web archive through the <a href="http://archive.org/web/web.php">Waybac
       <div id="wm-capresources-loading" style="text-align:left;margin:0 20px 5px 5px;display:none"><img src="https://web-static.archive.org/_static/images/loading.gif" alt="loading" /></div>
     </div>
     </div>
-  </div></div></div></div><div id="wm-ipp-print">The Wayback Machine - https://web.archive.org/web/20160201072251/http://nidiag.org/links</div>
+  </div></div></div></div><div id="wm-ipp-print">The  - https://web.archive.org/web/20160201072251/http://nidiag.org/links</div>
 
-<!-- END WAYBACK TOOLBAR INSERT -->
+<!-- END  TOOLBAR INSERT -->
  
 	<div id="bando">
 	</div>
@@ -788,7 +788,7 @@ window.onload = init46();
 <!--
      FILE ARCHIVED ON 07:22:51 Feb 01, 2016 AND RETRIEVED FROM THE
      INTERNET ARCHIVE ON 05:25:58 Feb 17, 2024.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
+     JAVASCRIPT APPENDED BY , COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
      SECTION 108(a)(3)).
