--- a/whoweare.html
+++ b/whoweare.html
@@ -520,7 +520,7 @@
                     <span class="iconochive-web"></span>
                   </a>
                   <a
-                    href="https://www.shorturl.at/shortener.php"
+                    href=""
                     title="Sign In"
                     id="wm-sign-in"
                   >
