--- a/copyright.html
+++ b/copyright.html
@@ -387,7 +387,7 @@ background-color: #be0926 !important;
           <a id="wm-save-snapshot-open" href="#" title="Share via My Web Archive" >
             <span class="iconochive-web"></span>
           </a>
-          <a href="https://www.shorturl.at/shortener.php" title="Sign In" id="wm-sign-in">
+          <a href="" title="Sign In" id="wm-sign-in">
             <span class="iconochive-person"></span>
           </a>
           <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
