--- a/links.html
+++ b/links.html
@@ -359,20 +359,20 @@ background-color: #be0926 !important;
           <!-- NEXT/PREV MONTH NAV AND MONTH INDICATOR -->
           <tr class="m">
             <td class="b" nowrap="nowrap">Jan</td>
-            <td class="c" id="displayMonthEl" title="You are here: 07:22:51 Feb 01, 2016">FEB</td>
-            <td class="f" nowrap="nowrap"><a href="/links.html" title="24 Mar 2016"><strong>Mar</strong></a></td>
+            <td class="c" id="displayMonthEl" >FEB</td>
+            <td class="f" nowrap="nowrap"><a href="/links.html" ><strong>Mar</strong></a></td>
           </tr>
           <!-- NEXT/PREV CAPTURE NAV AND DAY OF MONTH INDICATOR -->
           <tr class="d">
             <td class="b" nowrap="nowrap"><img src="/images/wm_tb_prv_off.png" alt="Previous capture" width="14" height="16" border="0" /></td>
-            <td class="c" id="displayDayEl" style="width:34px;font-size:22px;white-space:nowrap;" title="You are here: 07:22:51 Feb 01, 2016">01</td>
-            <td class="f" nowrap="nowrap"><a href="/links.html" title="11:32:54 Mar 24, 2016"><img src="/images/wm_tb_nxt_on.png" alt="Next capture" width="14" height="16" border="0" /></a></td>
+            <td class="c" id="displayDayEl" style="width:34px;font-size:22px;white-space:nowrap;" title="">01</td>
+            <td class="f" nowrap="nowrap"><a href="/links.html" ><img src="/images/wm_tb_nxt_on.png" alt="Next capture" width="14" height="16" border="0" /></a></td>
           </tr>
           <!-- NEXT/PREV YEAR NAV AND YEAR INDICATOR -->
           <tr class="y">
-            <td class="b" nowrap="nowrap">2015</td>
-            <td class="c" id="displayYearEl" title="You are here: 07:22:51 Feb 01, 2016">2016</td>
-            <td class="f" nowrap="nowrap"><a href="/links.html" title="29 Jun 2017"><strong>2017</strong></a></td>
+            <td class="b" nowrap="nowrap"></td>
+            <td class="c" id="displayYearEl" ></td>
+            <td class="f" nowrap="nowrap"><a href="/links.html" ><strong></strong></a></td>
           </tr>
         </tbody>
       </table>
@@ -425,7 +425,7 @@ background-color: #be0926 !important;
 	      </div>
       <div style="display:inline-block;vertical-align:top;width:49%;">
 			<span class="c-logo" style="background-image:url(/images/wide00013.jpeg)"></span>
-		<div>Collection: <a style="color:#33f;"><span class="wm-title">Survey Crawl Number 4 - Started Jan 9th, 2016 - Ended Feb 25th, 2016</span></a></div>
+		<div>Collection: <a style="color:#33f;"><span class="wm-title">Survey Crawl Number 4</span></a></div>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
 	  <p>The seed for this crawl was a list of every host in the </p>
@@ -585,9 +585,9 @@ window.onload = init16();
 <table class="contentpaneopen">
 	<tr>
 		<td valign="top"><p><span style="color: #ff9900;"><strong>NIDIAG Workshop, Yogyakarta, Indonesia</strong></span></p>
-<p style="text-align: justify;"><span style="font-size: 8pt; font-family: verdana, geneva; color: #000000;">A second Workshop dedicated to the <strong>Guideline Development for Persistant Fever Syndrome </strong>will be held in in Yogyakarta, Indonesia, on 12-13 March 2016. This workshop will gather NIDIAG partners involved in these activities and is a crucial step in the frame of NIDIAG project activities, in the elaboration of clinical guidelines for the diagnosis of neglected diseases in endemic area.</span></p>
+<p style="text-align: justify;"><span style="font-size: 8pt; font-family: verdana, geneva; color: #000000;">A second Workshop dedicated to the <strong>Guideline Development for Persistant Fever Syndrome </strong>will be held in in Yogyakarta, Indonesia. This workshop will gather NIDIAG partners involved in these activities and is a crucial step in the frame of NIDIAG project activities, in the elaboration of clinical guidelines for the diagnosis of neglected diseases in endemic area.</span></p>
 <p style="text-align: justify;"><strong style="color: #ff9900; font-size: 12.16px; line-height: 1.3em;">Final Consortium meeting, Yogyakarta, Indonesia</strong></p>
-<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">The final Consortium meeting will held in Yogyakarta, Indonesia, on 14-16 March 2016. This meeting will gather together all NIDIAG Partners and will be the opportunity to present and discuss the latest progresses made in NIDIAG, to review the project as a whole and to discuss the possibilities for the future.</span></p></td>
+<p style="text-align: justify;"><span style="font-family: verdana, geneva; font-size: 8pt;">The final Consortium meeting will held in Yogyakarta, Indonesia This meeting will gather together all NIDIAG Partners and will be the opportunity to present and discuss the latest progresses made in NIDIAG, to review the project as a whole and to discuss the possibilities for the future.</span></p></td>
 	</tr>
 	<tr>
         <td valign="top">
@@ -678,7 +678,7 @@ window.onload = init16();
 <td><a href="https://web.archive.org/web/20160201072251/http://ec.europa.eu/research/health/infectious-diseases/neglected-diseases/index_en.html" target="_blank"><img style="border: #000000 0px;" alt="EC_logo" src="/images/EC_logo.jpg" width="94" height="94"/></a></td>
 <td>
 <h1 style="text-align: justify;"><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;"><span style="color: #000000;">European Commission Research in Neglected Infectious Diseases</span></span></span></h1>
-<p style="text-align: justify;"><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">Research into neglected infectious diseases is included in the European Commission's seventh framework programme (FP7, 2007-2013) as one of four pillars in infectious diseases research.</span></span></p>
+<p style="text-align: justify;"><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">Research into neglected infectious diseases is included in the European Commission's seventh framework programme as one of four pillars in infectious diseases research.</span></span></p>
 <p style="text-align: justify;"><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">The aim is to address research gaps and priority areas for neglected infectious diseases through genomic and post-genomic research at the European level, and with the ultimate goal of developing new prophylactics (vaccines), treatments, diagnostics or control tools for neglected infectious diseases.</span></span></p>
 <p style="text-align: justify;"><span style="font-family: verdana,geneva;"><span style="font-size: 8pt;">The collaboration between European scientists and scientists in disease endemic countries is highly prioritised, as is the involvement of industry, public-private partnerships and non-governmental organisations.</span></span></p>
 </td>
@@ -779,22 +779,3 @@ window.onload = init46();
     <div id="bandobas"></div>
 </body>
 </html>
-<!--
-     FILE ARCHIVED ON 07:22:51 Feb 01, 2016 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 05:25:58 Feb 17, 2024.
-     JAVASCRIPT APPENDED BY , COPYRIGHT INTERNET ARCHIVE.
-
-     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
-     SECTION 108(a)(3)).
--->
-<!--
-playback timings (ms):
-  exclusion.robots: 1.322 (7)
-  exclusion.robots.policy: 1.234 (7)
-  cdx.remote: 0.524 (7)
-  esindex: 0.066 (7)
-  LoadShardBlock: 1043.602 (24)
-  PetaboxLoader3.datanode: 535.627 (25)
-  load_resource: 99.661
-  PetaboxLoader3.resolve: 62.065
--->
