--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ background-color: #be0926 !important;
 if (TransMenu.isSupported()) {
 var ms = new TransMenuSet(TransMenu.direction.down, 0,0, TransMenu.reference.bottomLeft);
 var menu162 = ms.addMenu(document.getElementById("menu162"));
- menu162.addItem("Partners", "/who-we-are/partners.html", "0");
+ menu162.addItem("Links & Partners", "/who-we-are/partners.html", "0");
 var menu164 = ms.addMenu(document.getElementById("menu164"));
  menu164.addItem("Context", "", "0");
 menu164.addItem("Expected Outcomes", "/our-activities/expected-outcomes", "0");
