--- a/whoweare.html
+++ b/whoweare.html
@@ -797,7 +797,7 @@
                 TransMenu.reference.bottomLeft
               );
               var menu162 = ms.addMenu(document.getElementById("menu162"));
-              menu162.addItem("Partners", "who-we-are/partners.html", "0");
+              menu162.addItem("Links & Partners", "who-we-are/partners.html", "0");
               var menu164 = ms.addMenu(document.getElementById("menu164"));
               menu164.addItem("Context", "", "0");
               menu164.addItem(
@@ -1021,7 +1021,7 @@
                       ><span style="font-size: 8pt"
                         ><a
                           href="/who-we-are/partners.html"
-                          >View all partners</a
+                          >View all Links & Partners </a
                         ></span
                       ></span
                     >
