--- a/links.html
+++ b/links.html
@@ -417,7 +417,7 @@ background-color: #be0926 !important;
     <div style="padding:3px;position:relative" id="wm-collected-by-content">
             <div style="display:inline-block;vertical-align:top;width:50%;">
 			<span class="c-logo" style="background-image:url(/images/webwidecrawl.jpeg);"></span>
-		Organization: <a style="color:#33f;" ><span class="wm-title">Internet Archive</span></a>
+		Organization: <a style="color:#33f;" ><span class="wm-title">Internet </span></a>
 		<div style="max-height:75px;overflow:hidden;position:relative;">
 	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
 	
